[package]
name = "csvsheet"
version = "0.1.0"
authors = ["Jonathan S <gereeter+code@gmail.com>"]

[dependencies]
ncurses = "5.97.0"
csv = "1.0.2"
unicode-segmentation = "1.2.1"
unicode-width = "0.1.5"
terminfo = "0.6.1"
clap = "2.32.0"
tempfile = "3.0.4"

[target.'cfg(unix)'.dependencies]
nix = "0.9.0"
